2012-07-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx-config.xsd:
	    An attempt at writing a "formal" configuration file syntax
	    description.  It is really not XML that config file, nor
	    can XSD define it clearly, I think..

2012-07-28  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 2.04

	* filter.c:
	    Wrong way to put len* fields into an union vs. a few other things.

	* dupecheck.c, digipeater.c:
	    Fix from iw3ijq + k3pdk about AX25 duplicate tracking dropping null pointers.
	    This has _not_ been validated for TNC mode frames yet, but now AX.25
	    works properly.

2012-01-18  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 2.03test4

	* interface.c:
	    Record outbound "history heard" per interface.

	* historydb.c:
	    Simple refactoring to use same hash function all the time.

	* digipeater.c:
	    Feed all transmitted packets to dupe-filter of that transmitter.
	    This will handle cross-band digipeat + tx-gates so that
	    an APRS packet transmitted to a channel won't be digipeated
	    again by this transmitter.

	* igate.c:
	    When constructing APRSIS originated 3rd-party tx-igate
	    packets, use correct version of "TCPIP" in the header.

2012-01-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION:  2.03test3

	* pbuf.h, pbuf.c, aprx.h:
	    New infrastructure function: pbuf_fill() that does
	    former two (then 3) copies of same code in interface.c

	* interface.c:
	    Use new pbuf_fill().
	    On 3rd-party receiver, parse original (sort of) TNC2 frame
	    to temporary AX.25 frame for filter analysis.
	    Rearranged filter running and reactioning.

	* filter.c:
	    Debug printouts

	* All files...
	    Copyright text update.

2011-12-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    3rd-party igate tx processing fixes, now it allows also
	    other than messages

2011-12-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
